# rdb_exp3

./: Cargo.toml  rdb_exp3.db
assets/: rdb_exp3.pdm  table_init.sql
src/: config.rs  main.rs  model.rs  utils.rs
src/client/: api.rs  mod.rs
src/server/: api.rs  mod.rs  user.rs
src_sql/: config_create.sql
