[package]
name = "rdb_exp3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rusqlite = { version = "0.29.0", features = ["bundled"] }
log = "0.4.17"
env_logger = "0.10.0"
tokio = { version = "1.27.0", features = ["full"] }
warp = "0.3.5"
serde = { version = "1.0.160", features = ["derive"] }
reqwest = "0.11.17"
serde_json = "1.0.96"